--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src",
-    "build:client": "webpack"
+    "build:client:dev": "webpack --config=_webpack/webpack.config.js --env=dev",
+    "build:client:prod": "webpack --config=_webpack/webpack.config.js --env=prod"
   },
   "repository": {
     "type": "git",
