--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "babel-plugin-istanbul": "^6.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.17.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2"
   },
   "husky": {
     "hooks": {
