--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-istanbul": "^6.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.17.0",
     "firebase-tools": "^7.12.0",
